Updated the game to Stage4.

--- a/Tic-Tac-Toe/First move!/task-info.yaml
+++ b/Tic-Tac-Toe/First move!/task-info.yaml
@@ -308,5 +308,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/48/stages/258/implement
-status: Unchecked
-record: -1
+status: Solved
+record: 4
