--- a/Tic-Tac-Toe/Fight!/task-info.yaml
+++ b/Tic-Tac-Toe/Fight!/task-info.yaml
@@ -442,5 +442,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/48/stages/259/implement
-status: Unchecked
+status: Solved
 record: -1
